add needed functionality
