# src/routes/subject.rt.js
@@ -5,9 +5,14 @@ import { ROLES } from '../utils/constants/roles.constants.js';
 
 const router = express.Router();
 
-router.get('/', subjectController.getAllSubjects);
+router.get('/', checkRole(ROLES.ADMIN), subjectController.getAllSubjects);
 router.post('/', checkRole(ROLES.ADMIN), subjectController.createSubject);
-router.get('/:id', subjectController.getSubjectById);
+router.get(
+    '/current',
+    checkRole(ROLES.TEACHER),
+    subjectController.getTeacherSubjects
+);
+router.get('/:id', checkRole(ROLES.ADMIN), subjectController.getSubjectById);
 router.put('/:id', checkRole(ROLES.ADMIN), subjectController.putSubject);
 router.patch('/:id', checkRole(ROLES.ADMIN), subjectController.patchSubject);
 router.delete('/:id', checkRole(ROLES.ADMIN), subjectController.deleteSubject);
